--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,42 +1,62 @@
- @import '../../Theme.scss';
+@import "../../Theme.scss";
 
- .header {
-   display: flex;
-   position: sticky;
-   top: 0;
-   width: 100%;
-   z-index: 3;
-   padding: 0.625rem 1.25rem 0.625rem 2.5rem;
-   justify-content: space-between;
-   align-items: center;
-   flex-shrink: 0;
-   background-color: $darkblueprimary;
-   color: $white;
- }
+.header {
+  display: flex;
+  // position: fixed;
+  // top: 0;
+  width: 100%;
+  z-index: 3;
+  padding: 0.625rem 1.25rem 0.625rem 2.5rem;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+  background-color: $darkblueprimary;
+  color: $white;
+}
 
- .header-user {
-   display: flex;
-   align-items: center;
-   gap: 2.5rem;
- }
+.header-user {
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
+}
 
- .header-organization {
-   display: flex;
-   padding: 0.3125rem 0.9375rem;
-   flex-direction: column;
-   align-items: flex-start;
-   gap: 0.625rem;
-   border-radius: 1.875rem;
-   background-color: $darkbluesecondary;
- }
+.header-organization {
+  display: flex;
+  padding: 0.3125rem 0.9375rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.625rem;
+  border-radius: 1.875rem;
+  background-color: $darkbluesecondary;
+}
 
- .wrapper-logo-content {
-   display: flex;
-   align-items: center;
-   gap: 0.4375rem;
- }
+.wrapper-logo-content {
+  display: flex;
+  align-items: center;
+  gap: 0.4375rem;
+}
 
- .organization-logo {
-   width: 1.75rem;
-   height: 1.25rem;
- }
+.organization-logo {
+  width: 1.75rem;
+  height: 1.25rem;
+}
+
+@media (max-width: $md) {
+  .header-logo {
+    height: 3rem;
+  }
+  .wrapper-logo-content {
+    height: 1rem;
+    width: 3.5rem;
+    gap: 0.3rem;
+    .organization-logo {
+      height: 0.9rem;
+    }
+    span {
+      font-size: x-small;
+    }
+  }
+  .header-user {
+    gap: 1.5rem;
+  }
+}
