--- a/src/Theme.scss
+++ b/src/Theme.scss
@@ -15,6 +15,8 @@ $background: #ecf8ff;
 $darkblueprimary: #2d3748;
 $white: #fff;
 $darkbluesecondary: #0b2136;
+$lightblueprimary: #ecf8ff;
+$active-sidebar: #ECF8FF;
 
 //Font-size
 $font-small: 10px;
@@ -41,7 +43,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Inter", sans-serif;
@@ -56,6 +58,13 @@ body {
 }
 
 //class commons
+.subtitle1 {
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+}
 .subtitle2 {
   font-family: Inter;
   font-size: 0.875rem;
@@ -83,6 +92,14 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+// width-screen
+$xs: "480px";
+$sm: "576px";
+$md: "768px";
+$lg: "992px";
+$xl: "1200px";
+$xxl: "1600px";
