--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -3,13 +3,14 @@
 footer {
   display: flex;
   bottom: 0;
-  height: 4.9375rem;
-  padding: 0.625rem;
+  height: $xlarger;
+  padding: $small;
   justify-content: center;
   align-items: center;
-  gap: 0.625rem;
+  gap: $small;
   flex-shrink: 0;
   background-color: $darkblueprimary;
   margin-top: auto;
   color: $white;
+  text-align: center;
 }
