--- a/src/Theme.scss
+++ b/src/Theme.scss
@@ -2,31 +2,110 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 // COLOR VARIABLES
+$main: #2D3748;
+$primary: #EDF2F7;
+$darkblueprimary: #2D3748;
+$darkbluesecondary: #0B2136;
+$lightblueprimary: #ECF8FF;
+$white: #FFFFFF;
+$black: #000000;
+$blue: #31A0FF;
+$blue100: #1890FF;
+$blue200: #108EE9;
+$pink: #EB2F96;
+$grey100: #FAFAFA;
+$green: #2F903F;
+$green100: #52C41A;
+$yellow100: #FAAD14;
+$orange: #D45B13;
+$background: #ECF8FF;
+$colorBgContainer: #FFFFFF;
 $sub-info: #474747;
-$main: #2d3748;
-$alert: #e74a3b;
-$unmodified: #8b8b8b;
-$orange: #d45b13;
-$female: #ff7568;
-$green: #2f903f;
-$primary: #edf2f7;
-$box: #dfdede;
-$background: #ecf8ff;
-$darkblueprimary: #2d3748;
-$white: #fff;
-$darkbluesecondary: #0b2136;
-$lightblueprimary: #ecf8ff;
+$alert: #E74A3B;
+$unmodified: #8B8B8B;
+$box: #DFDEDE;
 $active-sidebar: #ECF8FF;
+$female: #FF7568;
+$classCodeColor: #F2212C;
+$table1: #1890FF;
+$table2: #52C41A;
+$table3: #FAAD14;
+$box: rgba(0, 0, 0, 0.1);
 
-//Font-size
-$font-small: 10px;
-$font-medium: 12px;
-$font-normal: 14px;
-$font-large: 16px;
+//SIZES VARIABLES
+$xs-small: 0.15rem;
+$sm-smaller: 0.25rem;
+$md-small: 0.3rem;
+$lg-small: 0.5rem;
+$small: 0.625rem;
+$xsmall: 0.75rem;
+$xxsmall: 0.8rem;
+$xxlsmall: 0.9rem;
+$xs-medium: 1rem;
+$sm-medium: 1.15rem;
+$md-medium: 1.25rem;
+$medium: 1.5rem;
+$lg-medium: 1.75rem;
+$xmedium: 2rem;
+$xxmedium: 2.25rem;
+$xxlmedium: 2.5rem;
+$xs-large: 2.75rem;
+$sm-large: 3rem;
+$md-large: 3.25rem;
+$large: 3.5rem;
+$lg-large: 3.75rem;
+$xlarge: 4rem;
+$xxlarge: 4.25rem;
+$xxl-large: 4.5rem;
+$md-xlarge: 4.75rem;
+$xlarger: 5rem;
+$xxlarger: 5.25rem;
+$xxl-xlarge: 5.5rem;
+$lg-xlarge: 5.75rem;
+$md-xxlarge: 6rem;
+$xxlg: 6.25rem;
+$xlargest: 6.5rem;
+$xxlargest: 6.75rem;
+$xxxlarge: 7rem;
+$xxxxlarge: 7.25rem;
+$xxxxxlarge: 7.5rem;
+$xxxxxxlarge: 7.75rem;
+$xxxxxxxlarge: 8rem;
 
-//Height
+// SPECIFICS SIZES
 
-// Style
+
+//FONT-SIZE VARIABLES
+$font-size-small: 10px;
+$font-size-medium: 12px;
+$font-size-normal: 14px;
+$font-size-large: 16px;
+
+// SPECIFICS FONT-SIZE
+$borderRadiusLG: 10px;
+
+//BREAKPOINTS
+$xs: "480px";
+$sm: "576px";
+$md: "768px";
+$lg: "992px";
+$xl: "1200px";
+$xxl: "1600px";
+
+// Z-INDEX VARIABLES
+$z-index-lowest: 1;
+$z-index-low: 10;
+$z-index-medium: 50;
+$z-index-high: 100;
+$z-index-highest: 1000;
+
+// SPECIFICS Z-INDEX VALUES
+$z-index-modal: 500;
+$z-index-dropdown: 300;
+$z-index-sticky: 1000;
+$z-index-tooltip: 200;
+
+// STYLES
 * {
   margin: 0;
   padding: 0;
@@ -41,13 +120,13 @@ body,
 
 body {
   min-height: 100vh;
+  font-size: 14px;
   display: flex;
   flex-direction: column;
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Inter", sans-serif;
-  font-size: 14px;
 }
 
 #root,
@@ -57,7 +136,7 @@ body {
   height: 100vh;
 }
 
-//class commons
+//CLASS COMMONS
 .subtitle1 {
   font-family: Inter;
   font-size: 1rem;
@@ -65,6 +144,7 @@ body {
   font-weight: 400;
   line-height: 1.5rem;
 }
+
 .subtitle2 {
   font-family: Inter;
   font-size: 0.875rem;
@@ -87,7 +167,6 @@ body {
   font-style: normal;
   font-weight: 600;
   line-height: 2.25rem;
-  /* 150% */
   letter-spacing: 0.3rem;
 }
 
@@ -95,11 +174,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-// width-screen
-$xs: "480px";
-$sm: "576px";
-$md: "768px";
-$lg: "992px";
-$xl: "1200px";
-$xxl: "1600px";
